will add another recipe to the recipes folder

--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -1,9 +1,9 @@
 <h1>Reverse-sear Prime Rib Roast</h1>
 <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F6169675.jpg&w=596&h=596&c=sc&poi=face&q=85" alt="Prime Rib Roast">
-<h2>Description 
+<h2>Description:
     <p>Dry-brining the prime rib the day before roasting means every bite is flavorful, and slow-roasting at a low temperature followed by a high-heat sear ensures a delicious medium-rare doneness throughout with a savory herb crust.</p>
 </h2>
-<h2>Ingredients 
+<h2>Ingredients:
     <ul>
         <li>1 (10 pound) bone-in standing rib roast</li>
         <li>2 tablespoons kosher salt</li>
@@ -13,7 +13,7 @@
         <li>ground black pepper to taste</li>
     </ul>
 </h2>
-<h2>Steps 
+<h2>Steps:
     <ol>
         <li>Season roast generously with kosher salt. Cover loosely with plastic wrap and refrigerate, 8 hours to overnight.</li>
         <li>Remove roast from refrigerator and allow to come to room temperature, about 2 hours.</li>
