--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/steak.html">Reverse-sear Prime Rib Roast</a>
+    <ul>
+        <li><a href="./recipes/steak.html">Reverse-sear Prime Rib Roast</a></li>
+        <li><a href="./recipes/momo.html">Nepali Momos</a></li>
+    </ul>
 </body>
 </html>
