--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="https://media-cdn.tripadvisor.com/media/photo-s/1b/84/59/fd/viking-food-5.jpg" alt="viking food">
     <ul>
         <li><a href="./recipes/steak.html">Reverse-sear Prime Rib Roast</a></li>
         <li><a href="./recipes/momo.html">Nepali Momos</a></li>
