--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ul>
         <li><a href="./recipes/steak.html">Reverse-sear Prime Rib Roast</a></li>
         <li><a href="./recipes/momo.html">Nepali Momos</a></li>
+        <li><a href="./recipes/snowflakes.html">Snow Flake cookies</a></li>
     </ul>
 </body>
 </html>
